# MaNTA

./: .gitignore  .gitmodules  1DLinearTest.conf  2_file_comp.py  3VarCyl.nc  ADTest.ref.nc  AdjointProblem.hpp  AdjointVectors.cpp  AutodiffFlux.cpp  AutodiffFlux.hpp  Basis.hpp  BuildNonLinObjects.cpp  CMakeLists.txt  COPYRIGHT  Constants.hpp  CylindricalMagneticField.py  DGApprox.hpp  DGBasis.hpp  DGSoln.hpp  DGStatic.cpp  Diagnostic.cpp  Diagnostic.hpp  DiffusionObj.cpp  DiffusionObj.hpp  ErrorChecker.cpp  ErrorChecker.hpp  ErrorTester.cpp  ErrorTester.hpp  FluxObject.hpp  InitialConditionLibrary.cpp  InitialConditionLibrary.hpp  Jacobi.hpp  LICENCE.md  LinearDiffusion.nc  MTS.cpp  MaNTA.cpp  Makefile  Makefile.config  Makefile.local.example  Makefile.local.perlmutter  (+48 more)
Config/: 3VarCyl.conf  3VarMirror.conf  3VarMirrorScitech.conf  3VarSinglePressure.conf  4VarCyl.conf  4VarMirror.conf  ADTestProblem.conf  AdjointPlasma.conf  AdjointTestProblem.conf  AutodiffMatrix.conf  AutodiffTransportSystem.conf  AuxVarADTest.conf  AuxVarTest.conf  CMFX.conf  CMFX1.conf  CMFX2.conf  CMFX3.conf  CMFX_working.conf  CurvedFieldPlasmaDebug.conf  CurvedMirrorPlasma.conf  FishersEquation.conf  LinearDiffSourceTest.conf  LinearDiffusion.conf  MatrixDiffusion.conf  MirrorFusion.conf  MirrorPlasma.conf  MirrorPlasma2.conf  MirrorPlasmaDebug.conf  MirrorPlasmaLog.conf  MirrorPlasmaLogDensity.conf  MirrorPlasmaTest.conf  MirrorPlasmaTest1.conf  MirrorPlasmaTest2.conf  MirrorPlasmaTest3.conf  MirrorPlasmaTest4.conf  NonlinAutodiff.conf  NonlinearDiffusion.conf  ScalarTestDot.conf  SlabPlasma.conf
InputFiles/: 1DFisher.conf  3VarCMFX.conf  ConstVoltage.conf  PlasmaClassTest.conf  pouseille.conf
PhysicsCases/: 3VarCylFlux.cpp  3VarCylFlux.hpp  3VarSinglePressure.cpp  ADMultiVar.cpp  ADMultiVar.hpp  ADTestProblem.cpp  ADTestProblem.hpp  ADTwoChannel.cpp  ADTwoChannel.hpp  AdjointPlasma.cpp  AdjointPlasma.hpp  AdjointPoster.cpp  AdjointPoster.hpp  AdjointTestProblem.cpp  AdjointTestProblem.hpp  Autodiff3VarCyl.cpp  Autodiff3VarCyl.hpp  AutodiffAdjointProblem.cpp  AutodiffAdjointProblem.hpp  AutodiffMatrix.cpp  AutodiffTransportSystem.cpp  AutodiffTransportSystem.hpp  AuxVarADTest.cpp  AuxVarADTest.hpp  AuxVarTest.cpp  AuxVarTest.hpp  CMakeLists.txt  Constants.cpp  Constants.hpp  CurvedFieldPlasmaDebug.cpp  CurvedFieldPlasmaDebug.hpp  CurvedMagneticField.cpp  CurvedMirrorPlasma.cpp  CurvedMirrorPlasma.hpp  CylPlasma.cpp  CylPlasma.cpp.off  CylPlasma.hpp  CylPlasmaDebug.cpp  CylPlasmaDebug.hpp  EquilibrationTest.cpp  (+75 more)
PhysicsCases/CurvedMirrorPlasma/: CurvedAmbipolarPhi.cpp  CurvedMirrorUtils.cpp
PhysicsCases/MirrorPlasma/: AmbipolarPhi.cpp  ConstantVoltage.cpp  MirrorPlasmaDiagnostics.hpp  PlasmaConstants.cpp  PlasmaConstants.hpp  PlasmaDiagnostics.cpp
PhysicsCases/old/: Autodiff3VarCyl.cpp  Autodiff3VarCyl.hpp  AutodiffMatrix.cpp  AutodiffMatrix.hpp
Plasma_cases/: CMFXparallellosses.hpp  ConstVoltage.cpp  ConstVoltage.hpp  Cylinder3Var.cpp  Cylinder3Var.hpp  CylindricalPlasmaConstDensity.cpp  CylindricalPlasmaConstDensity.hpp  MirrorModel.cpp  MirrorModel.hpp  Plasma.cpp  Plasma.hpp  Template.cpp  Template.hpp  pouseille.cpp  pouseille.hpp
Plugins/: Cylinder.cpp  Cylinder.hpp  Makefile  MantaPhysicsPlugin.hpp
Tests/RegressionTests/: 1DLinearTest.plot  ADTest.conf  ADTest.ref.nc  AdjointTestProblem.ref.nc  AuxVarTest.conf  AuxVarTest.ref.nc  CheckRegressionTests.sh  LinearDiffusion.conf  LinearDiffusion.ref.nc  Makefile  MatTest.conf  MatTest.ref.nc  MatTestAlpha.conf  MatTestAlpha.ref.nc  Nonlin2.conf  Nonlin2.ref.nc  PIDTest.conf  PIDTest.ref.nc  TestSolution.py  TestSolutions.py  ld.conf  nonlin.conf  nonlin_ss.conf  u_t_1.plot
Tests/UnitTests/: AdjointTests.cpp  AutodiffTest.cpp  Bfield.ref.nc  DGTests.cpp  LinearDiffusionTests.cpp  MagneticFieldTest.cpp  Makefile  Makefile.config  MatrixDiffusion.restart.nc  MirrorPlasmaTest.cpp  SystemSolverTests.cpp  TestDiffusion.hpp  main.cpp  testic.nc
Tools/: plot.py  plot_scalar.py
Tools/Convergence/: ConvergenceRuns.py  nonlin_ss.template  nonlin_ss_run.conf
Tools/plasmaOutput/: plasmaOutput.py
Tools/vtkConverter/: .gitignore  README.md  plasmaOutput.py  test.py  vtkConverter.py  vtkOutput.py  vtkTraces.py
UnitTests/: 1DLinearTest.conf  1DLinearTest.report  3VarLinearTest.conf  3VarLinearTest.report  CheckRegressionTests.sh  SystemSolverTests.cpp  trial.plot
cmake/: FindSUNDIALS.cmake
old/: Constants.cpp  Diagnostic.cpp  Diagnostic.hpp  DiffusionObj.cpp  MirrorPlasmaLog.hpp  Variable.cpp  Variable.hpp
old/Bfield/: CylindricalMagneticField.cpp  CylindricalMagneticField.hpp
old/InputFiles/: 1DLinearTest.conf  3VarCMFX.conf  CMFXparallellosses.conf  PlasmaClassTest.conf
old/Old autodiff/: 3VarSinglePressure.hpp  CylPlasma.hpp  CylPlasmaDebug.cpp  FourVarCylFlux.cpp  FourVarCylFlux.hpp  FourVarMirror.cpp  FourVarMirror.hpp  MirrorPlasmaDebug.cpp  MirrorPlasmaDebug.hpp  MirrorPlasmaLogDensity.hpp  NonlinAutodiff.cpp  NonlinAutodiff.hpp  SlabPlasma.cpp  SlabPlasma.cpp.off  ThreeVarCylinder.cpp  ThreeVarCylinder.hpp  ThreeVarMirror.cpp  ThreeVarMirror.hpp
python/: AdjointAnalysis.ipynb  FFIRunner.py  JAXAdjointProblem.py  JAXLinearDiffusion.conf  JAXLinearDiffusion.py  JAXTransportSystem.py  MaNTARunner.py  MaNTARunner_example.py  MantaPythonTransport.py  Objective.py  PyManta  PythonLinearDiffusion.py  SpatialAdjoint.ipynb  SpatialAdjoint.py  State.py  Stellarator.conf  Stellarator.py  StellaratorEquilbrium.py  StellaratorTransport.ipynb  StellaratorTransport.py  TransportModule.py  VectorizedTransportSystem.py  desc_optimize copy.ipynb  desc_optimize-att2.ipynb  desc_optimize.ipynb  desc_optimize.py  desc_optimize2.py  eq2_self_consistent_pressure.h5  gpu_test.ipynb  gpu_test.py  jax.conf  jax_adjoint.conf  jvp_test.py  module_test.py  py.conf  test_callback.py  test_compilation.py  test_derivatives.ipynb  test_optimize.py  xla_test.py  (+1 more)
python/Tests/: Makefile  (+8 more)
runs/: FisherTest.conf  MatTest.conf  eq-test.conf  ld.conf  test.conf  test2.conf  vn-test.conf
test-run/: ld.conf  test2.conf
util/: mirror_plots.py  trapezoid.hpp
(+9 files in other folders)
