cmake_minimum_required(VERSION 3.9.1)
set(LIBRARY_OUTPUT_PATH  ${CMAKE_BINARY_DIR}/lib)
set(SOURCES 3VarCylFlux.hpp AutodiffTransportSystem.hpp Constants.cpp FishersEquation.cpp FourVarCylFlux.cpp LD2.cpp LinearDiffusion.cpp MatrixDiffusion.cpp MatrixDiffusionTest.cpp MatrixFlux.cpp NonlinearDiffusion.cpp)
set(Headers 3VarCylFlux.hpp AutodiffTransportSystem.hpp Constants.hpp FishersEquation.hpp FourVarCylFlux.hpp LD2.hpp LinearDiffusion.hpp MatrixDiffusion.hpp MatrixDiffusionTest.hpp MatrixFlux.hpp NonlinearDiffusion.hpp)
add_library(PhysicsCases STATIC ${SOURCES})
target_include_directories(PhysicsCases PUBLIC ${CMAKE_SOURCE_DIR})

set(AUTODIFF_DIR "/home/eatocco/packages/autodiff")
set(SUNDIALS_DIR "/home/eatocco/packages/sundials")
# set(SUNDIALS_LIB_DIR "/home/eatocco/sundials/lib/lib")
set(EIGEN_DIR "/usr/share/eigen3")

target_include_directories(PhysicsCases PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../toml11)

# list(APPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
# list(APPEND CMAKE_PREFIX_PATH "/usr/")
# list(APPEND CMAKE_PREFIX_PATH ${SUNDIALS_DIR})
find_package(Eigen3 REQUIRED)
find_package(SUNDIALS CONFIG PATHS ${SUNDIALS_DIR})
find_package(autodiff CONFIG PATHS ${AUTODIFF_DIR})


if(autodiff_FOUND)
    message("autodiff Found")
    target_include_directories(PhysicsCases PRIVATE ${autodiff_DIR}/../../../include)
    target_link_libraries(PhysicsCases ${autodiff_LIBRARIES})
elseif(NOT autodiff_FOUND)
    message("autodiff Not Found")
endif()


if(SUNDIALS_FOUND)
    message("SUNDIALS Found")
    target_include_directories(PhysicsCases PRIVATE ${SUNDIALS_DIR}/../../../include)
    target_link_libraries(PhysicsCases ${SUNDIALS_LIBRARIES})
elseif(NOT SUNDIALS_FOUND)
    message("SUNDIALS Not Found")
endif()

if(Eigen3_FOUND)
    message("Eigen3 Found")
    target_include_directories(PhysicsCases PRIVATE ${EIGEN3_INCLUDE_DIR})
    target_link_libraries(PhysicsCases ${EIGEN3_LIBRARIES})
elseif(NOT Eigen3_FOUND)
    message("Eigen Not Found")
endif()
